--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,67 @@
         </div>
     </section>
 
+    <!-- Services Section Design -->
+    <section class="services" id="services">
+        <h2 class="heading">Our <span>Services</span></h2>
+        <div class="services_container">
+            <div class="services_box">
+                <i class='bx bx-code-alt'></i>
+                <h3>Web developement</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde tempore fugiat, sunt perspiciatis quo delectus minus distinctio illum molestias itaque obcaecati! Voluptates laborum dolor beatae incidunt expedita natus necessitatibus unde.</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+            <div class="services_box">
+                <i class='bx bxs-paint'></i>
+                <h3>Graphic Design</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde tempore fugiat, sunt perspiciatis quo delectus minus distinctio illum molestias itaque obcaecati! Voluptates laborum dolor beatae incidunt expedita natus necessitatibus unde.</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+            <div class="services_box">
+                <i class='bx bx-line-chart-down' ></i>
+                <h3>DIgital Marketing</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde tempore fugiat, sunt perspiciatis quo delectus minus distinctio illum molestias itaque obcaecati! Voluptates laborum dolor beatae incidunt expedita natus necessitatibus unde.</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- Portfolio Section Design -->
+    <section class="portfolio" id="portfolio">
+        <h2 class="heading">Latest <span>Projects</span></h2>
+        <div class="portfolio_container">
+            <div class="portfolio_box">
+                <img src="https://cdn.dribbble.com/users/6047818/screenshots/15035184/media/fa9f28eb28ecf4deaa2bf6ed2eb14a82.png?compress=1&resize=400x300&vertical=center" alt="design developement"/>
+                <div class="portfolio_lay">
+                    <h4>Web Design</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias quibusdam ipsam esse ducimus optio molestiae, veritatis numquam voluptates enim id modi maiores pariatur incidunt magnam? Doloribus nulla rem repudiandae magni.</p>
+                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                </div>
+            </div>
+            <div class="portfolio_box">
+                <img src="https://cdn.dribbble.com/users/2399102/screenshots/9214760/media/b1d586d857690649d4d706968a2adaea.png?resize=400x0" alt="frontend design"/>
+                    <h4>Web Design</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias quibusdam ipsam esse ducimus optio molestiae, veritatis numquam voluptates enim id modi maiores pariatur incidunt magnam? Doloribus nulla rem repudiandae magni.</p>
+                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                </div>
+            </div>
+            <div class="portfolio_box">
+                <img src="https://www.upwork.com/catalog-images-resized/b77e97b8ac3bc84eddc1e9f5d34bc3aa/thumbnail-medium" alt="Movie app"/>
+                <h4>Web Design</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias quibusdam ipsam esse ducimus optio molestiae, veritatis numquam voluptates enim id modi maiores pariatur incidunt magnam? Doloribus nulla rem repudiandae magni.</p>
+                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                </div>
+            </div>
+            <div class="portfolio_box">
+                <img src="https://cdn.dribbble.com/users/418188/screenshots/6045470/media/c538a924bc6b88307fc5c6a55d523103.png?compress=1&resize=400x300&vertical=center" alt="Movie app"/>
+                <h4>Web Design</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias quibusdam ipsam esse ducimus optio molestiae, veritatis numquam voluptates enim id modi maiores pariatur incidunt magnam? Doloribus nulla rem repudiandae magni.</p>
+                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- custom js script -->
     <script src="../src/js/script.js"></script>
 </body>
